--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Lethe</title>
-    <link rel="stylesheet" href="//cdn.bootcss.com/antd/2.13.0/antd.css"/>
+    <!--<link rel="stylesheet" href="//cdn.bootcss.com/antd/2.13.0/antd.css"/>-->
     <!--<script type="text/javascript" src="//oss.ltcdn.cc/prod/baitai-components/btmjs/1.0.0/index.js"></script>-->
 </head>
 <body style="background-color: #f2f2f2">
