--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
     <title>Lethe</title>
-    <!--<link rel="stylesheet" href="//cdn.bootcss.com/antd/2.13.0/antd.css"/>-->
-    <!--<script type="text/javascript" src="//oss.ltcdn.cc/prod/baitai-components/btmjs/1.0.0/index.js"></script>-->
+    <link rel="stylesheet" href="//cdn.bootcss.com/antd/2.13.0/antd.css"/>
 </head>
 <body style="background-color: #f2f2f2">
 <div id="root" style="height: 100%;"></div>
 </body>
 </html>
-
